<?xml version="1.0"?>
<package>
  <name>racecar_simulator</name>
  <version>0.0.1</version>
  <description>
    Metapackage for Gazebo and ROS simulation of RACECAR
  </description>

  <maintainer email="abhia@mit.edu">Abhishek Agarwal</maintainer>
  <author email="abhia@mit.edu">Abhishek Agarwal</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
